# PromptShield

./: .dockerignore  .gitignore  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  audit_test.db  docker-compose.yml  promptshield.db  pyproject.toml
.github/workflows/: ci.yml
config/: policies.yaml
plugins/: __init__.py  context_detector.py  email_detector.py  github_token_detector.py  internal_url_detector.py  ip_address_detector.py  keyword_detector.py  secret_detector.py
src/promptshield/: __init__.py  __main__.py  _version.py  base_detector.py  breakdown.py  classifier.py  cli.py  client.py  compliance.py  config.py  container.py  explainer.py  finding.py  pipeline.py  plugin_loader.py  policy_engine.py  sanitizer.py  scoring.py  service.py
src/promptshield/api/: __init__.py  admin_routes.py  app.py  auth.py  dashboard_routes.py  dependencies.py  routes.py  schemas.py
src/promptshield/dashboard/: __init__.py  auth.py  metrics.py  pages.py
src/promptshield/dashboard/templates/: analyses.html  analysis_detail.html  audit.html  base.html  compliance.html  index.html  report.html
src/promptshield/persistence/: __init__.py  cleanup.py  crypto.py  database.py  models.py  recorder.py  repository.py  tenancy.py  unit_of_work.py  usage.py
src/promptshield/resources/config/: policies.yaml  rules.yaml
src/promptshield/resources/plugins/: email_detector.py  github_token_detector.py  (+3 more)
tests/: __init__.py  conftest.py  test_admin_permissions.py  test_api.py  test_api_audit.py  test_breakdown.py  test_classifier.py  test_cli_policy.py  test_compliance.py  test_context_detector.py  test_dashboard_api.py  test_dashboard_auth.py  test_dashboard_pages.py  test_email_detector.py  test_exit_codes.py  test_explainer.py  test_github_token_detector.py  test_internal_url_detector.py  test_ip_address_detector.py  test_json_security.py  test_jwt_detector.py  test_keyword_detector.py  test_multi_tenancy.py  test_persistence.py  test_pipeline.py  test_policy_engine.py  test_private_key_detector.py  test_retention.py  test_sanitizer.py  test_secret_detector.py  test_service.py  test_service_persistence.py  test_usage_tracking.py
