[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptshield-security"
version = "0.6.0"
description = "Firewall for prompts sent to Large Language Models — modular detector pipeline, policy engine, and Enterprise API."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
authors = [{ name = "PromptShield Contributors" }]
keywords = ["llm", "security", "prompt", "firewall", "secrets", "dlp", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "PyYAML>=6.0",
    "colorama>=0.4.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-json-logger>=2.0.7",
    "pydantic>=2.0",
    "SQLAlchemy>=2.0.36",
    "cryptography>=43.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "mypy>=1.8",
    "types-PyYAML>=6.0",
    "types-colorama>=0.4",
    "ruff>=0.8.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-json-logger>=2.0.7",
]
persistence = [
    "SQLAlchemy>=2.0.36",
    "cryptography>=43.0.0",
    "psycopg[binary]>=3.2.0",
]

[project.scripts]
promptshield = "promptshield.cli:main"
promptshield-serve = "promptshield.cli:run_serve"

[project.urls]
Homepage = "https://github.com/sirteggun/PromptShield"
Documentation = "https://github.com/sirteggun/PromptShield#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptshield = [
    "py.typed",
    "dashboard/templates/*.html",
    "resources/config/*.yaml",
    "resources/plugins/*.py",
]

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["promptshield"]
